fix: overflow

--- a/css/style-resume.css
+++ b/css/style-resume.css
@@ -1,11 +1,12 @@
 html {
     font-family: sans-serif;
     -ms-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%
+    -webkit-text-size-adjust: 100%;
 }
 
 body {
-    margin: 0
+    margin: 0;
+    overflow: hidden;
 }
 
 article,
